# catplus-zarr-converters

./: .gitignore  2-Synth.json  Cargo.toml  README.md  justfile  rustfmt.toml  save.text
.github/workflows/: docker_build_push.yaml  format.yaml
catplus-common/: Cargo.toml
catplus-common/models/: enums.rs
catplus-common/rdf/: rdf_serializers.rs
catplus-common/src/graph/namespaces/: alloqual.rs
catplus_common/: Cargo.toml  lib.rs
catplus_common/graph/: insert_into.rs
commonlib/: Cargo.toml  lib.rs
commonlib/graph/: graph_builder.rs  mod.rs  prefix_map.rs
commonlib/graph/namespaces/: alloproc.rs  unit.rs
commonlib/rdf/: convert.rs  mod.rs  rdf_parser.rs
example/: 1-Synth.json  test.rs
src/agilent-converter/: Cargo.toml
src/agilent-converter/src/: lib.rs  main.rs
src/agilent-converter/src/models/: mod.rs  types.rs
src/catplus-common/: Cargo.toml
src/catplus-common/src/: lib.rs
src/catplus-common/src/graph/: graph_builder.rs  mod.rs  (+4 more)
src/converter/: Cargo.toml
src/converter/src/: convert.rs  ir-test.rs  main.rs
src/converter/tests/: agilent_tests.rs  convert_tests.rs  hci_tests.rs  synth_tests.rs
src/hci-converter/: Cargo.toml
src/hci-converter/src/: convert.rs  main.rs
src/hci-converter/tests/: convert_tests.rs
src/synth-converter/src/: convert.rs  lib.rs
src/synth-converter/tests/: convert_tests.rs
src/validation/: Cargo.toml  core.rs
src/validation/engines/: shacl_api.rs
src/validation/src/: core.rs  lib.rs  main.rs
src/validation/src/engines/: mod.rs  shacl_api.rs
synth-converter/: Cargo.toml
synth-converter/data/: synth.json  synth.ttl
synth-converter/src/: batch.rs  convert.rs  jsonld.rs  jsonmapper.rs  lib.rs  main.rs  models.rs  parser.rs  serializing.rs
synth-converter/src/common/: mod.rs  utils.rs
synth-converter/src/exploration/: jsonld.rs  quads.rs  ttl.rs
synth-converter/src/graph/: graph_builder.rs  insert_into.rs  mod.rs  namespaces.rs  prefix_map.rs  rdf_serializers.rs  utils.rs
synth-converter/src/graph/namespaces/: allores.rs  cat.rs  mod.rs  obo.rs  purl.rs  qudt.rs  schema.rs  unit.rs
synth-converter/src/jsonmapper/: graphinsert.rs
synth-converter/src/models/: enums.rs  graph_impls.rs  mod.rs  types.rs
synth-converter/src/parser/: actions.rs  batch.rs  mod.rs  parser.rs  person.rs
synth-converter/src/rdf/: mod.rs  rdf_parser.rs  rdf_serializers.rs
synth-converter/tests/: convert_tests.rs  parser_tests.rs
tools/just/: docker.just
tools/nix/: flake.nix
tools/nix/images/: default.nix
tools/scripts/: anaylze-binary.sh
zarr-converter/: Cargo.toml
zarr-converter/src/: agilent.rs  array_builder.rs  chunk.rs  extractor.rs  lib.rs  loader.rs  main.rs  manage_arrays.rs  manage_groups.rs  manage_store.rs  metadata_add.rs  utils.rs
zarr-converter/src/utils_zarr/: mod.rs  zarr_arrays_utils.rs  zarr_chunker.rs  zarr_groups_utils.rs  zarr_metadata_consolidate.rs  zarr_store_utils.rs
(+28 files in other folders)
