[package]
name = "synth-converter"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "synth-converter"
path = "synth-converter/src/main.rs"

[dependencies]
jsonschema = "0.22.3"
sophia = { version = "0.8.0-alpha.3", features = ["jsonld"] }
oxigraph = "0.4.3"
oxrdf = "0.2.1"
oxttl = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
rand = "0.8"
