[package]
name = "synth-converter"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
sophia = "0.8.0"
sophia_api = "0.8.0"
sophia_term = "0.8.0"
sophia_turtle = "0.8.0"
uuid = { version = "1", features = ["v4"] }
