[package]
name = "validation"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
catplus-common = { version="0.1.0", path = "../catplus-common"}
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
lazy_static = "1.5.0"
sophia = { version = "0.9.0", features = ["jsonld"] }
sophia_api = "0.9.0"
sophia_term = "0.9.0"
sophia_turtle = "0.9.0"
uuid = { version = "1", features = ["v4"] }
sophia_isomorphism = "0.9.0"
clap = { version = "4.3.0", features = ["derive"] }
anyhow = "1.0.93"
testcontainers = { version = "0.23.3", features = ["blocking"] }
reqwest = { version = "0.12.15", features = ["blocking", "multipart"] }
